--- a/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.css
+++ b/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.css
@@ -3,16 +3,11 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/. */
 
-using Umbraco.Core.PropertyEditors;
+.contentment .umb-panel .form-search {
+    margin-bottom: 15px;
+}
 
-namespace Our.Umbraco.Contentment.DataEditors
-{
-    public class BlocksConfigurationEditor : ConfigurationEditor
-    {
-        public BlocksConfigurationEditor()
-            : base()
-        {
-            Fields.AddHideLabel();
-        }
-    }
+.contentment .umb-actions-child .umb-action-link {
+    padding-right: 10px;
+    width: 95%;
 }
