--- a/src/Our.Umbraco.Contentment/DataEditors/CheckboxList/checkbox-list.css
+++ b/src/Our.Umbraco.Contentment/DataEditors/CheckboxList/checkbox-list.css
@@ -3,7 +3,14 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/. */
 
-.contentment ul.checkbox li label small {
-    margin-left: 18px;
-    padding-top: 0;
+.contentment.umb-checkboxlist ul.toggle-all {
+    margin-bottom: 15px;
 }
+
+.contentment.umb-checkboxlist ul li label {
+    margin-bottom: 8px;
+}
+
+    .contentment.umb-checkboxlist ul li label small {
+        padding-top: 0;
+    }
