IconPicker - code tidy-up

--- a/src/Umbraco.Community.Contentment/DataEditors/IconPicker/icon-picker.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/IconPicker/icon-picker.css
@@ -19,3 +19,7 @@
         color: #2152a3;
         text-decoration: none;
     }
+
+    .contentment .lk-icon-picker-small i.color-black {
+        color: #000;
+    }
