--- a/src/Umbraco.Community.Contentment/DataEditors/Buttons/buttons.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/Buttons/buttons.css
@@ -3,26 +3,19 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/. */
 
-.contentment.lk-buttons button {
-    background: #ffffff;
-    border: 1px solid #d8d7d9;
-    width: auto;
-    min-width: 90px;
-    height: 80px;
-    padding: 10px;
-    margin: 3px;
+.contentment.lk-buttons .umb-button {
+    margin-bottom: 5px;
 }
 
-    .contentment.lk-buttons button.selected {
-        background-color: #f5c1bc;
-        border-color: #1b264f;
-        color: #1b264f;
-    }
+.contentment.lk-buttons .umb-button--selected .umb-button__button {
+    background-color: #f5c1bc;
+}
 
-    .contentment.lk-buttons button i {
-        height: 30px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 5px;
+.contentment.lk-buttons .umb-button__button {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+    .contentment.lk-buttons .umb-button__button[disabled] {
+        opacity: 0.5;
     }
