Cull: Removed "Checkbox" from v1.0.0
It may return in a future version.

--- a/src/Umbraco.Community.Contentment/DataEditors/CheckboxList/checkbox-list.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/CheckboxList/checkbox-list.css
@@ -10,3 +10,12 @@
 .contentment.umb-checkboxlist ul li label {
     margin-bottom: 8px;
 }
+
+.contentment .umb-form-check__text {
+    margin-top: 1px;
+}
+
+    .contentment .umb-form-check__text small {
+        display: block;
+        padding-top: 0;
+    }
