--- a/src/Umbraco.Community.Contentment/DataEditors/CheckboxList/checkbox-list.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/CheckboxList/checkbox-list.css
@@ -11,6 +11,10 @@
     margin-bottom: 8px;
 }
 
+.contentment .umb-form-check__text .icon {
+    padding-right: 2px;
+}
+
 .contentment .umb-form-check__text small {
     display: block;
     padding-top: 0;
