--- a/src/Umbraco.Community.Contentment/DataEditors/RadioButtonList/radio-button-list.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/RadioButtonList/radio-button-list.css
@@ -3,6 +3,6 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/. */
 
-.contentment.umb-radiobuttons ul.radio li {
+.contentment.umb-radiobuttons ul.unstyled li {
     margin-bottom: 5px;
 }
