Added backoffice UI style for links
within the `.alert-form` class. Fixes their appearance.

--- a/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
+++ b/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
@@ -28,3 +28,8 @@
 .umb-action-link .icon-umbraco {
     height: 30px;
 }
+
+/* Anchor links within `.alert-form` are rendered as white, (appearing invisible) */
+.alert-form a {
+    color: #1b264f;
+}
