--- a/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.overlay.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.overlay.css
@@ -3,7 +3,7 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/. */
 
-.contentment .umb-panel .form-search {
+.contentment.lk-overlay .umb-panel .form-search {
     margin-bottom: 15px;
 }
 
