--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/components/stack-editor.html
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/components/stack-editor.html
@@ -4,8 +4,8 @@
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 <div class="contentment lk-content-blocks">
-    <div class="lk-content-blocks__container" ui-sortable="vm.sortableOptions" ng-model="vm.items">
-        <div class="lk-content-blocks__block" ng-repeat="item in vm.items">
+    <div class="lk-content-blocks__container" ui-sortable="vm.sortableOptions" ng-model="vm.ngModel">
+        <div class="lk-content-blocks__block" ng-repeat="item in vm.ngModel">
 
             <div tabindex="-1" class="lk-content-blocks__preview">
                 <div class="lk-content-blocks__preview--left" ng-if="vm.previews[item.key]">
