--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.css
@@ -23,6 +23,7 @@
             content: "";
             background: rgba(225, 225, 225, 0.5);
             border-radius: 3px;
+            box-shadow: 0px 1px 1px 0px rgba(33, 33, 66, 0.2);
             position: absolute;
             top: 0;
             bottom: 0;
