--- a/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.overlay.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.overlay.css
@@ -22,21 +22,28 @@
     padding-left: 0;
 }
 
-.contentment.lk-overlay .-disabled {
-    opacity: 0.5;
+.contentment.lk-overlay .umb-action {
 }
 
-    .contentment.lk-overlay .-disabled .umb-card-grid-item,
-    .contentment.lk-overlay .-disabled .umb-action-link,
-    .contentment.lk-overlay .-disabled .umb-checkmark {
-        cursor: not-allowed;
+    .contentment.lk-overlay .umb-action.-disabled {
+        opacity: 0.5;
     }
 
-        .contentment.lk-overlay .-disabled .umb-checkmark:hover {
-            border-color: #bbbabf;
-            color: #1b264f;
+        .contentment.lk-overlay .umb-action.-disabled .umb-card-grid-item,
+        .contentment.lk-overlay .umb-action.-disabled .umb-action-link,
+        .contentment.lk-overlay .umb-action.-disabled .umb-checkmark {
+            cursor: not-allowed;
         }
 
-        .contentment.lk-overlay .-disabled .umb-checkmark.icon-check:before {
-            content: "\e230";
-        }
+            .contentment.lk-overlay .umb-action.-disabled .umb-checkmark:hover {
+                border-color: #bbbabf;
+                color: #1b264f;
+            }
+
+            .contentment.lk-overlay .umb-action.-disabled .umb-checkmark.icon-check:before {
+                content: "\e230";
+            }
+
+    .contentment.lk-overlay .umb-action:not(.-disabled) .umb-checkmark:not(.umb-checkmark--checked).icon-check:before {
+        content: none;
+    }
