Umbraco icon temp CSS fix
Thanks to @bjarnef for the CSS amend (for issue #77)
ref: https://github.com/leekelleher/umbraco-contentment/issues/77#issuecomment-796269154

--- a/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
+++ b/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
@@ -22,7 +22,7 @@
 [class].icon-umbraco {
     background-image: url(/umbraco/assets/img/application/logo_black.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
 }
 
 .umb-action-link .icon-umbraco {
