Notes - updated CSS for <details/summary>
This meant I could remove a bunch of extra markup.

--- a/src/Umbraco.Community.Contentment/DataEditors/Notes/notes.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/Notes/notes.css
@@ -7,6 +7,10 @@
     cursor: pointer;
 }
 
+    .umb-readonlyvalue details summary + * {
+        margin-top: .5rem;
+    }
+
 .umb-readonlyvalue .well {
     margin-bottom: 10px;
 }
