ContentBlocks - added "Blocks" display mode
This is visually similar to the default view of
Umbraco's Block List editor.

The preview mechanism has not been wired up yet.

--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.css
@@ -146,3 +146,7 @@
 .lk-content-blocks .umb-node-preview-add {
     margin-right: 45px;
 }
+
+.contentment.umb-block-list .umb-block-list__wrapper {
+    max-width: 800px;
+}
