--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/components/blocks-editor.html
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/components/blocks-editor.html
@@ -16,17 +16,17 @@
                     <button type="button"
                             class="btn-reset umb-outline blockelement-labelblock-editor blockelement__draggable-element"
                             ng-click="vm.edit($index)">
-                        <i class="icon" ng-class="vm.populate(item, $index, 'icon')"></i>
+                        <umb-icon icon="{{_icon = vm.populate(item, $index, 'icon')}}" class="icon" ng-class="_icon"></umb-icon>
                         <span ng-bind="vm.populate(item, $index, 'name')"></span>
                     </button>
                 </div>
                 <div class="umb-block-list__block--actions">
                     <button ng-repeat="btn in vm.blockActions[$index]" type="button" class="btn-reset umb-outline action" title="{{btn.label}}" ng-click="btn.method()">
-                        <i class="icon icon-{{btn.icon}}" aria-hidden="true"></i>
+                        <umb-icon icon="icon-{{btn.icon}}" class="icon"></umb-icon>
                         <span class="sr-only" ng-bind="btn.label"></span>
                     </button>
                     <button type="button" class="btn-reset umb-outline action --delete" localize="title" title="general_remove" ng-click="vm.remove($index)">
-                        <i class="icon icon-trash" aria-hidden="true"></i>
+                        <umb-icon icon="icon-trash" class="icon"></umb-icon>
                         <span class="sr-only">
                             <localize key="general_remove">Remove</localize>
                         </span>
