--- a/src/Umbraco.Community.Contentment/DataEditors/IconPicker/icon-picker.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/IconPicker/icon-picker.css
@@ -20,7 +20,14 @@
         text-decoration: none;
     }
 
-    .contentment .lk-icon-picker-small i.color-black,
-    .contentment .umb-sortable-thumbnails .umb-icon-holder .file-icon > i.color-black {
+    .contentment .lk-icon-picker-small i.color-black {
         color: #000;
     }
+
+.contentment .umb-mediapicker .umb-sortable-thumbnails__wrapper > .icon {
+    font-size: 50px;
+}
+
+.contentment .umb-mediapicker .umb-sortable-thumbnails__wrapper > small {
+    text-align: center;
+}
