--- a/src/Umbraco.Community.Contentment/DataEditors/TextInput/text-input.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/TextInput/text-input.css
@@ -7,3 +7,17 @@
     width: 100%;
     max-width: 800px;
 }
+
+    .contentment .text-input.input-prepend .umb-textstring,
+    .contentment .text-input.input-append .umb-textstring {
+        width: calc(100% - 36px);
+    }
+
+    .contentment .text-input.input-prepend.input-append .umb-textstring {
+        width: calc(100% - 72px);
+    }
+
+    .contentment .text-input .add-on:hover {
+        border-color: #d8d7d9;
+        color: #1b264f;
+    }
