--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.css
@@ -75,22 +75,6 @@
                 white-space: pre-wrap;
             }
 
-        .lk-content-blocks__block .lk-content-blocks__preview button.lk-content-blocks__edit {
-            background: transparent;
-            border: none;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            z-index: 25;
-        }
-
-            .lk-content-blocks__block .lk-content-blocks__preview button.lk-content-blocks__edit:focus {
-                outline: 0;
-                border: 1px solid #bbbabf;
-            }
-
     .lk-content-blocks__block .lk-content-blocks__actions {
         flex: 0 0 34px;
         padding: 10px 0 0 7px;
@@ -144,6 +128,17 @@
 
 .lk-content-blocks .umb-node-preview-add {
     margin-right: 45px;
+}
+
+.contentment button.lk-content-blocks__edit {
+    background: transparent;
+    border: none;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 25;
 }
 
 .contentment.umb-block-list .umb-block-list__wrapper {
