--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/components/templated-editor.html
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/components/templated-editor.html
@@ -1,4 +1,4 @@
-﻿<!-- Copyright © 2020 Lee Kelleher.
+﻿<!-- Copyright © 2023 Lee Kelleher.
    - This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
@@ -7,19 +7,10 @@
     <div class="lk-content-blocks__container" ui-sortable="vm.sortableOptions" ng-model="vm.ngModel">
         <div class="lk-content-blocks__block" ng-repeat="item in vm.ngModel track by $index">
 
-            <div tabindex="-1" class="lk-content-blocks__preview lk-content-blocks__preview--cover">
-                <div class="lk-content-blocks__preview--left" ng-if="vm.previews[item.key]">
-                    <umb-icon icon="{{_icon = vm.populate(item, $index, 'icon')}}" class="icon" ng-class="_icon"></umb-icon>
-                    <span ng-bind="vm.populate(item, $index, 'name')"></span>
-                </div>
+            <div tabindex="-1" class="lk-content-blocks__preview">
                 <div class="lk-content-blocks__preview--main">
-                    <div class="lk-content-blocks__preview--default" ng-if="!vm.previews[item.key]">
-                        <umb-icon icon="{{_icon = vm.populate(item, $index, 'icon')}}" class="icon" ng-class="_icon"></umb-icon>
-                        <h5 ng-bind="vm.populate(item, $index, 'name')"></h5>
-                    </div>
-                    <div class="lk-content-blocks__preview--markup" ng-if="vm.previews[item.key]">
-                        <umb-load-indicator ng-show="vm.previews[item.key].loading"></umb-load-indicator>
-                        <div ng-bind-html="vm.previews[item.key].markup | safe_html"></div>
+                    <div class="lk-content-blocks__preview--markup mt2">
+                        <div lk-bind-html-template="vm.itemTemplate"></div>
                     </div>
                 </div>
                 <button aria-label="Edit content"
@@ -35,7 +26,7 @@
                     <umb-icon icon="icon-navigation" class="icon"></umb-icon>
                 </li>
                 <li class="lk-content-blocks__action--item" ng-if="vm.canRemove(item, $index)">
-                    <button aria-label="Delete content block" type="button" class="btn-icon btn-reset umb-outline" ng-click="vm.remove($index)">
+                    <button aria-label="Delete item" type="button" class="btn-icon btn-reset umb-outline" ng-click="vm.remove($index)">
                         <umb-icon icon="icon-trash" class="icon"></umb-icon>
                     </button>
                 </li>
