Dashboard - added GitHub sponsors guilt trip :flushed:

--- a/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
+++ b/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
@@ -23,6 +23,11 @@
     color: #1b264f;
 }
 
+/* Contentment dashboard, paragraph line height felt squished. */
+.contentment .umb-box-content p {
+    line-height: 1.5rem;
+}
+
 /* Block List Configuration Card, fixes icon position of action buttons. */
 .contentment .umb-block-card .__actions > button {
     padding-top: 3px;
