--- a/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
+++ b/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
@@ -28,6 +28,11 @@
     line-height: 1.5rem;
 }
 
+/* Block List Configuration Card, adds fade to appear disabled/unpublished. */
+.contentment .umb-block-card.__fade {
+    opacity: 0.5;
+}
+
 /* Block List Configuration Card - Tweaks */
 .contentment .umb-block-card {
 }
