--- a/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
+++ b/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
@@ -28,15 +28,37 @@
     line-height: 1.5rem;
 }
 
-/* Block List Configuration Card, fixes icon position of action buttons. */
-.contentment .umb-block-card .__actions > button {
-    padding-top: 3px;
+/* Block List Configuration Card - Tweaks */
+.contentment .umb-block-card {
 }
 
-/* Block List Configuration Card, fixes dscription padding. */
-.contentment .umb-block-card .__info .__subname {
-    margin-right: 16px;
-}
+    .contentment .umb-block-card .__showcase {
+        background-color: rgba(0, 0, 0, 0.25);
+        background-size: cover;
+    }
+
+    .contentment .umb-block-card .__info .__name,
+    .contentment .umb-block-card .__info .__subname {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        margin-right: 10px;
+    }
+
+    /* Block List Configuration Card, adds fade to appear disabled/unpublished. */
+    .contentment .umb-block-card.__fade {
+        opacity: 0.5;
+    }
+
+    /* Block List Configuration Card, fixes icon position of action buttons. */
+    .contentment .umb-block-card .__actions > button {
+        padding-top: 3px;
+    }
+
+    /* Block List Configuration Card, fixes dscription padding. */
+    .contentment .umb-block-card .__info .__subname {
+        margin-right: 16px;
+    }
 
 /* Copyright © 2020 Perplex Digital
  * Parts of this Source Code has been derived from Perplex.ContentBlocks.
