Cards - added "no edit" style
Removed duplicated CSS rules (bad merge)

--- a/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
+++ b/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
@@ -50,26 +50,9 @@
         opacity: 0.5;
     }
 
-/* Block List Configuration Card - Tweaks */
-.contentment .umb-block-card {
-}
-
-    .contentment .umb-block-card .__showcase {
-        background-color: rgba(0, 0, 0, 0.25);
-        background-size: cover;
-    }
-
-    .contentment .umb-block-card .__info .__name,
-    .contentment .umb-block-card .__info .__subname {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        margin-right: 10px;
-    }
-
-    /* Block List Configuration Card, adds fade to appear disabled/unpublished. */
-    .contentment .umb-block-card.__fade {
-        opacity: 0.5;
+    /* Block List Configuration Card, non-editable styles, e.g. not clickable. */
+    .contentment .umb-block-card.__no-edit {
+        cursor: move;
     }
 
     /* Block List Configuration Card, fixes icon position of action buttons. */
@@ -77,7 +60,7 @@
         padding-top: 3px;
     }
 
-    /* Block List Configuration Card, fixes dscription padding. */
+    /* Block List Configuration Card, fixes description padding. */
     .contentment .umb-block-card .__info .__subname {
         margin-right: 16px;
     }
