--- a/src/Umbraco.Cms.11.x/Views/_layout.cshtml
+++ b/src/Umbraco.Cms.11.x/Views/_layout.cshtml
@@ -56,7 +56,7 @@
                     }
                 </nav>
             }
-            <p><a href="/umbraco/#/content/content/edit/@Model.Id" target="_blank">Go to the Umbraco back-office.</a></p>
+            <p><a href="/umbraco/#/content/content/edit/@Model.Id" target="_self">Go to the Umbraco back-office.</a></p>
         </header>
     }
 
