DataList - Tags, added CSS fix for overlay z-index
Resolves #339

--- a/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
+++ b/src/Umbraco.Community.Contentment/Web/UI/backoffice-ui-shim.css
@@ -28,6 +28,11 @@
     line-height: 1.5rem;
 }
 
+/* Tags - Typeahead overlay z-index. */
+.contentment .umb-tags-editor .tt-menu.tt-open {
+    z-index: 1001 !important;
+}
+
 /* Block List Configuration Card - Tweaks */
 .contentment .umb-block-card {
 }
